syntax = "proto3";

package holos.system.v1alpha1;
option go_package = "github.com/holos-run/holos/service/gen/holos/system/v1alpha1;system";

message Version {
  string version = 1;
  string git_commit = 2;
  string git_tree_state = 3;
  string go_version = 4;
  string build_date = 5;
  string os = 6;
  string arch = 7;
}
