syntax = "proto3";

package holos.system.v1alpha1;
option go_package = "github.com/holos-run/holos/service/gen/holos/system/v1alpha1;system";

import "google/protobuf/field_mask.proto";
import "holos/system/v1alpha1/system.proto";

message GetVersionRequest {
  // FieldMask represents the fields to include in the response.
  google.protobuf.FieldMask field_mask = 1;
}

message GetVersionResponse {
  Version version = 1;
}

message SeedDatabaseRequest {}
message SeedDatabaseResponse {}

message DropTablesRequest {}
message DropTablesResponse {}

service SystemService {
  rpc GetVersion(GetVersionRequest) returns (GetVersionResponse) {}
  rpc DropTables(DropTablesRequest) returns (DropTablesResponse) {}
  rpc SeedDatabase(SeedDatabaseRequest) returns (SeedDatabaseResponse) {}
}
